--- a/package.json
+++ b/package.json
@@ -13,22 +13,25 @@
     "prepare": "husky && husky install",
     "test": "echo \"No tests specified\" && exit 0"
   },
-
   "lint-staged": {
     "*.js": [
-        "eslint --fix",
-        "git add"
-      ],
+      "eslint --fix"
+    ],
     "*.css": [
-        "stylelint --fix",
-        "git add"
-      ]
-    }, 
+      "stylelint --fix"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "YOUR_COMMAND_HERE",
+      "pre-push": "YOUR_COMMAND_HERE"
+    }
+  },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.0.3",
     "date-fns": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.0.3",
     "vite": "^4.4.5"
   },
   "devDependencies": {
@@ -48,6 +51,10 @@
     "husky": "^8.0.0",
     "lint-staged": "^15.3.0",
     "prettier": "^3.4.2",
+    "stylelint": "^16.12.0",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-config-standard-scss": "^14.0.0",
+    "stylelint-scss": "^6.10.0",
     "typescript": "^4.9.0"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
